--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_functions: ^4.1.1
   firebase_core_web: ^2.3.0
   flutter_chat_bubble: ^2.0.2
+  mobx: ^2.2.0
+  flutter_mobx: ^2.0.6+5
 
 dev_dependencies:
   flutter_test:
