message state working

--- a/firebase.json
+++ b/firebase.json
@@ -18,6 +18,9 @@
       ]
     }
   ],
+  "storage": {
+    "rules": "storage.rules"
+  },  
   "emulators": {
     "auth": {
       "port": 9099
@@ -30,6 +33,9 @@
     },
     "ui": {
       "enabled": true
+    },
+    "storage": {
+      "port": 9199
     },
     "singleProjectMode": true
   }
