--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_chat_bubble: ^2.0.2
   mobx: ^2.2.0
   flutter_mobx: ^2.0.6+5
+  firebase_storage: ^11.2.1
+  image_picker: ^0.8.7+5
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
