--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   mobx: ^2.2.0
   flutter_mobx: ^2.0.6+5
   firebase_storage: ^11.2.1
-  image_picker: ^0.8.7+5
+  image_picker: ^1.0.0
   path_provider: ^2.0.15
 
 dev_dependencies:
